--- a/package.json
+++ b/package.json
@@ -1,24 +1,21 @@
 {
   "name": "open-academie-next",
   "version": "1.0.0",
-  "repository": "git@github.com:sgmap/open-academie-next.git",
+  "repository": "git@github.com:OpenAcademie/open-academie.git",
   "author": "Florian Delezenne <del.florian@gmail.com>",
-  "homepage": "https://sgmap.github.io/open-academie-next",
+  "homepage": "https://github.com/OpenAcademie/open-academie",
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "export": "next export",
+    "start": "next start"
+  },
   "dependencies": {
-    "gh-pages": "^1.1.0",
     "next": "^4.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
   "devDependencies": {
     "babel-plugin-transform-define": "^1.3.0"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "start": "next start",
-    "build": "next build",
-    "dev": "next",
-    "postinstall": "yarn build",
-    "deploy": "next build && next export && touch out/.nojekyll && gh-pages -t -d out"
   }
 }
